# somatic-indel-calling

./: CMakeLists.txt  README.md  call-somatic-variants.py  index.html  parameters.txt  params.json
python/: Alignments.py  BAMProcessor.py  BWABAMProcessor.py  DefaultBAMProcessor.py  Indel.py  LaserBAMProcessor.py
src/: CMakeLists.txt  smc_input.c  smc_input.h  smc_likelihood.c  smc_likelihood.h  smc_main.c
